# collective.regenv

./: .bandit  .coveragerc  .gitignore  CHANGELOG.md  CHANGES.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  LICENSE.md  LICENSE.rst  Makefile  README.md  README.rst  base.cfg  bobtemplate.cfg  buildout.cfg  instance.yaml  mx.ini  pyproject.toml  setup.cfg  setup.py  test-6.0.x.cfg  tox.ini
.github/instructions/: docs.instructions.md
.github/instructions/general/: docs.md
.github/workflows/: black.yml  changelog.yml  config.yml  flake8.yml  main.yml  tests.yml
docs/: .readthedocs.yaml  LICENSE.md  Makefile  README.md  conf.py  index.rst  pyproject.toml
docs/docs/: conf.py  glossary.md  index.md
docs/docs/concepts/: index.md
docs/docs/how-to-guides/: index.md
docs/docs/reference/: index.md
docs/docs/tutorials/: index.md
news/: +plone52.breaking  +plone61.feature  +plone62.feature  +pytest.tests  +python27.breaking  +python312.feature  +python313.feature  +python38.breaking  +python39.breaking  8.internal
scripts/: create_site.py
src/collective/regenv/: __init__.py  browser.py  configure.zcml  dependencies.zcml  monkey.py  proxy.py  registry.py  settings.py  testing.py
src/collective/regenv/browser/: browser.py  configure.zcml
src/collective/regenv/locales/: update.py  update.sh
src/collective/regenv/templates/: viewlet.pt
src/collective/regenv/tests/: sample.yaml  test_browser.py  test_registry.py
tests/: conftest.py  test_registry.py  test_settings.py  test_viewlet.py
tests/_resources/: tests-01.yaml  tests-02.yaml
tests/functional/: conftest.py  test_service_site.py
